# ephemeral_email

./: .gitignore  Cargo.toml  LICENSE  README.md  default.nix  flake.nix
examples/: random-mail.rs  random_mail.rs  with_rquest.rs
src/: client.rs  domain.rs  email.rs  error.rs  lib.rs  temp_mail.rs
src/provider/: fakemail_net.rs  mail_tm.rs  mod.rs  muellmail.rs  tempmail_lol.rs
