[package]
name = "ephemeral_email"
version = "0.1.0"
license = "MIT"
edition = "2021"

description = "A Rust library for generating temporary email addresses."
readme = "README.md"

[dependencies]
async-trait = "0.1.86"
rand = "0.9.0"
reqwest = { version = "0.12.12", features = ["cookies", "json"] }
rquest = { version = "2.2.1", features = ["cookies", "json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
thiserror = "2.0.11"

[dev-dependencies]
anyhow = "1.0.96"
tokio = { version = "1.43.0", features = ["full"] }
