[package]
name = "ephemeral_email"
version = "0.1.0"
edition = "2021"
license = "MIT"

authors = ["Henrik Willer <crates.io@hwiller.com>"]
description = "A Rust library for generating temporary email addresses."
readme = "README.md"
documentation = "https://docs.rs/ephemeral_email"
repository = "https://github.com/henrikwiller/ephemeral_email"

keywords = ["email", "temporary", "disposable", "tempmail", "automation"]
categories = ["email", "api-bindings"]

[dependencies]
async-trait = "0.1.86"
futures = "0.3.31"
rand = "0.9.0"
rquest = { version = "2.2.1", features = ["cookies", "json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
thiserror = "2.0.11"

[dev-dependencies]
anyhow = "1.0.96"
tokio = { version = "1.43.0", features = ["full"] }
