[package]
name = "ephemeral_email"
version = "0.2.0"
edition = "2021"
license = "MIT"

authors = ["Henrik Willer <crates.io@hwiller.com>"]
description = "A Rust library for generating temporary email addresses."
readme = "README.md"
documentation = "https://docs.rs/ephemeral_email"
repository = "https://github.com/henrikwiller/ephemeral_email"

keywords = ["email", "temporary", "disposable", "tempmail", "automation"]
categories = ["email", "api-bindings"]

[dependencies]
async-trait = "0.1.86"
futures = "0.3.31"
rand = "0.9.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
thiserror = "2.0.11"
reqwest = { version = "0.12.12", features = [
    "cookies",
    "json",
], optional = true }
rquest = { version = "3.0.1", features = ["cookies", "json"], optional = true }
rquest-util = { version = "0.2.0", optional = true }

[dev-dependencies]
anyhow = "1.0.96"
tokio = { version = "1.43.0", features = ["full"] }

[features]
default = ["use-reqwest"]
use-reqwest = ["dep:reqwest"]
use-rquest = ["dep:rquest", "dep:rquest-util"]

[[example]]
name = "random_mail"
required-features = ["use-reqwest"]

[[example]]
name = "with_rquest"
required-features = ["use-rquest"]
